--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,1 +1,159 @@
+body {
+	background-image: url("../img/backgrounds/1.jpg");
+	background-color: #cccccc;
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-position:center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #fff;
+    line-height: 24px;
+}
 
+strong { font-weight: 700; }
+
+a, a:hover, a:focus {
+	color: #000000;
+	text-decoration: none;
+    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+}
+
+h1, h2 {
+	margin-top: 10px;
+	font-size: 36px;
+    font-weight: 700;
+    color: #fff;
+    line-height: 44px;
+}
+
+img { max-width: 100%; }
+
+::-moz-selection { background: #a93a52; color: #fff; text-shadow: none; }
+::selection { background: #a93a52; color: #fff; text-shadow: none; }
+
+
+/***** Top menu *****/
+
+.navbar {
+	padding-top: 10px;
+	padding-bottom: 5px;
+	background: #333;
+	background: rgba(51, 51, 51, 0.7);
+	border: 0;
+	-o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+}
+
+ul.navbar-nav {
+	font-size: 14px;
+	color: #fff;
+}
+
+.navbar-inverse ul.navbar-nav li { padding-top: 8px; padding-bottom: 8px; }
+
+.navbar-inverse ul.navbar-nav li .li-text { margin-right: 10px; opasehir: 0.8; }
+
+.navbar-inverse ul.navbar-nav li a { display: inline; padding: 0; color: #fff; }
+.navbar-inverse ul.navbar-nav li a:hover { color: #fff; opasehir: 1; border-bottom: 1px dotted #fff; }
+.navbar-inverse ul.navbar-nav li a:focus { color: #fff; outline: 0; opasehir: 1; border-bottom: 1px dotted #fff; }
+
+.navbar-inverse ul.navbar-nav li .li-social a {
+	margin: 0 7px;
+	font-size: 28px;
+	vertical-align: middle;
+}
+.navbar-inverse ul.navbar-nav li .li-social a:hover, 
+.navbar-inverse ul.navbar-nav li .li-social a:focus { border: 0; color: #5f5f5f; }
+
+.navbar-brand {
+	width: 229px;
+	background: url(../img/logo.png) left center no-repeat;
+	text-indent: -99999px;
+}
+.navbar>.container .navbar-brand { margin-left: 0; }
+
+
+/***** Description *****/
+
+.description-container {
+	padding-top: 40px;
+	padding-bottom: 40px;
+	text-align: center;
+}
+
+.description-title { padding-bottom: 10px; }
+.description-text { opasehir: 0.8; }
+
+.description-text a { color: #fff; border: 0; }
+.description-text a:hover,
+.description-text a:focus { color: #fff; border-bottom: 1px dotted #fff; }
+
+.description-text .divider-1 { margin-top: 50px; }
+
+
+/***** Multi Step Form *****/
+
+.msf-container { padding-bottom: 80px; text-align: center; }
+
+.msf-title h3 { padding-bottom: 10px; font-weight: 700; }
+.msf-title p { opasehir: 0.8; }
+
+.msf-form h4 {
+	margin-top: 20px;
+	margin-bottom: 30px;
+	font-weight: 700;
+	line-height: 26px;
+}
+.msf-form h4 .step { color: #aaa; }
+
+.msf-form form fieldset { display: none; overflow: hidden; }
+
+.msf-form form input.form-control { width: 400px; margin-left: 5px; margin-right: 5px; }
+.msf-form form input.doubleinput { width: 50px; margin-left: 5px; margin-right: 0px; }
+.msf-form form input.doubleinput2 { width: 350px; margin-left: 0px; margin-right: 5px; }
+
+.msf-form form textarea.form-control { width: 700px; height: 160px; }
+
+.msf-form form select.form-control { width: 400px; margin-left: 5px; margin-right: 5px; }
+
+.msf-form form .form-group { margin-bottom: 15px; }
+
+.msf-form form button.btn { min-width: 110px; margin-top: 15px; margin-left: 5px; margin-right: 5px; }
+
+.msf-form form p { opasehir: 0.8; }
+
+.msf-form form .radio-buttons-1,
+.msf-form form .radio-buttons-2,
+.msf-form form .checkboxes-1,
+.msf-form form .checkboxes-2 { display: inline-block; margin: 0 15px 20px 15px; }
+
+.msf-form form .selects-1,
+.msf-form form .selects-2 { display: inline-block; margin: 0 0 20px 0; }
+.dropdown-content-student {
+	display: none;
+	position: absolute;
+	background-color: #333;
+	min-width: 220px;
+	padding: 12px 16px;
+	z-index: 1;
+}
+.dropdown-content-academic {
+	display: none;
+	position: absolute;
+	background-color: #333;
+	min-width: 190px;
+	padding: 12px 16px;
+	z-index: 1;
+}
+li.dropdown:hover .dropdown-menu {
+	display:inline-block;
+}
+.form-inline .form-group { margin-right:10px; }
+.well-primary {
+text-align:left;
+word-wrap:break-word;
+color: #333;
+background-color: #fff;
+border-color: #333;
+}
+.glyphicon { margin-right:5px; }
